# graph-embedding

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  first_test.py  genindex.html  graphtoolbox.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  rows.txt  search.html  searchindex.js  setup.py  shortest_paths.txt
.github/workflows/: main.yml  tests.yml
GraphGPS/: job.sh
SLURM/: hig_batch.sh
SLURM/example 1/: job.sh
SLURM/graphgps/: container_job.sh  enroot_job.sh  job.sh
SLURM/random_walk/: main.py
_modules/: index.html
_sources/: graphtoolbox.rst.txt  index.rst.txt
docs/: Makefile  conf.py  index.rst  requirements.txt
doctrees/: environment.pickle  index.doctree
examples/: autosk.ipynb  bug_fix_playground.ipynb  clean1_of_2.ipynb  clean2_of_2.ipynb  clean_test.ipynb  doc2vec_test.ipynb  esol_dataset.ipynb  first_test.py  freesolv.py  gensim.ipynb  gnerate_document.ipynb  graph2vec_test.ipynb  graph_size.ipynb  karateclub_dataset.ipynb  ogb_data_helper_test.ipynb  second_test.ipynb  slurm.sh  test.ipynb  test.py  to_remove.py
graph_embedding/: __init__.py  simple_embedder.py
graphtoolbox/: graph_helper.py
html/: objects.inv  py-modindex.html
introduction/: Dataset.html  how-to.html  installation.html  terms_and_definitions.html
modules/: graph_embedding.html  graphtoolbox.data_loaders.html  graphtoolbox.graph_embedding.html  graphtoolbox.helpers.html  graphtoolbox.html  graphtoolbox.random_walkers.html  modules.html
paths2vec/: .gitignore  readme.md  requirements.txt  result_generator.py
(+128 files in other folders)
