[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphtoolbox"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Private ::"
]

[project.urls]
"Homepage" = "https://chrishaxalot.github.io/graph-embedding"